--- a/memo/0.md
+++ b/memo/0.md
@@ -169,10 +169,170 @@ const obs = ObservedValues({
 
 # プリミティブ型
 
+　JavaScriptは数をNumber型で扱うが、これは64bitメモリであり、かつIEEE754の倍精度浮動小数点数で実装されている。このため十進数表示において、整数は15桁まで、少数は17桁までは正確に表現できるが、それ以上の桁になると正確に表現できず、比較式も不正確な結果を返してしまう。しかもそれを正常とし、エラーを発生させない。
+
+　それでは困る。必ず正確に表せる範囲内のみ扱いたい。しかし実際には`0.000000000000000000001`のように17桁を超えた少数の入力をしてもエラーにできない。もしこれを正確にするなら、`Number.toFixed(15+1)`の文字列比較する。但し、16桁目は四捨五入されるので、16桁目は削除し、正確に表せる15桁までの数で比較する。但し少数比較は等号`===`では誤差があるため比較できない。よって誤差があってもイコールとみなす関数を用意する。
+
+```javascript
+nearlyEqual(x, y) {// 等号===の代替。JSのNumber型は64bit浮動少数点数であり比較等号===では完全一致確認できない（console.assert(0.3===0.1+0.2）でエラーになる）これをいくらか解決する。但し15桁の少数まで。
+    if (parseInt(x) !== parseInt(y)) {return false}
+    const T = parseInt(Math.abs(x + y));
+    const tolerance = T < 1 ? Number.EPSILON : Number.EPSILON * T;
+    return Math.abs(x - y) < tolerance;
+}
+
+// https://qiita.com/murasuke/items/0fb6a6f1bf4c03266720
+// 浮動少数で誤差が出ることは避けられない。たとえ桁数を1桁にしても誤差が出てしまう。`(1.15).toFixed(1);`で`1.2`を返して欲しいのに`1.1`を返す等。
+// 0.1+0.2=0.30000000000000004(17桁目で狂っている)
+// 0.1+0.3=0.4 (なぜかピッタリ)
+// 0.1+0.7=0.7999999999999999 (16桁目で途切れている。そもそも0.8未満)
+// (0.1+0.7).toFixed(16)=0.7999999999999999 (16桁目で途切れている。そもそも0.8未満)
+// (0.1+0.7).toFixed(15)=0.800000000000000 (なぜか15桁にすると0.8になる)
+// たぶん桁数は1〜5など少ないほど精度が高まると思われる
+// あとはNumber((0.1+0.7).toFixed(15))とすれば数になる。
+roundedFloat(v,fig) {return Number(v.toFixed(fig ?? 17))}
+roundedFloat(v,fig) {// 少数を16桁までで丸めた値を返す（17桁はIEEE754倍精度少数点数において誤差のない正確な値を示せる最大桁数である。でも0.1+0.2=0.30000000000000004(17桁目で狂っている)になったので16桁までとする）
+  const s = v.toFixed(fig ?? 17);
+  const S = s.split('.');
+  if (1===S.length) {return v}
+  const [i,f] = [S[0], S[1].slice(0,-1)]; // 整数部、少数部
+  return Number(i+'.'+f);
+  const F = 
+  S[1]
+  const F = 15 < f.length ? f.slice(0, 15) : f;
+  // 小数点以下が0000000等ゼロだけで構成される場合や、00010000など途中から末尾までゼロが続く場合は、そのゼロを削除する
+}
+```
+
+js で正確に浮動小数点数を計算する方法 は次の二通りある。
+
+* 整数に変換してから計算するか
+* 専用のライブラリを使用する
+
+```javascript
+function roundedFloat(v, fig=0) {
+    const D = Math.pow(10, fig);
+    const d = Math.trunc(v * D);
+    return d / D;
+}
+```
+```javascript
+// fig は 少数部分の桁数。JSのNumberは整数15桁,少数17桁まで正確に表せるが、実際少数は様々な場面で誤差を生じさせるため整数化させる必要がある
+// つまり少数部は整数化するため15桁が上限になる。しかも元々整数部であった数と共用するため、少数桁を多くするほど整数桁は少なくなる。
+// 999999999999999や99999.9999999999や9999999999.99999までしか使えない。
+//class RoundedFloat extends Float {
+//    constructor(value, unsafed, unsigned, fig, min, max) {
+//class DecimalFloat {
+//class DecimalFinite {
+//class DecimalNumber {
+class DecimalFinite {// 10進数における整数と少数を合わせて15桁までの有限数
+    constructor(value, fig, unsigned, min, max) {
+        super(value, false, unsigned, min, max);
+        this._.fig = {i:15-fig整数部の桁数, f:f少数部の桁数}
+        this._.pad = {i:{char:'0',fig:'max/min/任意値'}, f:{char:'0',fig:'max/min/任意値'}} // 文字列表現するときの桁数と埋める字
+        this._.I = 整数部; Number型としての整数
+        this._.F = 少数部;  Number型としての整数
+        this._.S = 文字列型としての表現;
+        this._.N = Number型としての実数;
+        this.roundedFloat(value, fig);
+    }
+    roundedFloat(v, fig=0) {// v:Number型実数
+        const D = Math.pow(10, fig);
+        const I = Math.trunc(v);
+        const d = Math.trunc(v * D);
+        this._.I = I;
+        this._.F = parseInt(d.slice(I.toString().length));
+        this._.S = `${this._.I}.${this._.F}`; // 整数部, 少数部それぞれに対してのゼロ埋めやスペース埋めをどうするか
+        this._.N = parseFloat(this._.S); // d / D
+    }
+    valueOf() {return this._.N}
+    get step() {return Number(Math.pow(0.1, this._.fig).toFixed(this._.fig));}
+    // 四則演算(+:add, -:sub, *:mul, /:div), %:sur, **:pow        剰余:surplus
+    add(v){}
+    sub(v){}
+    mul(v){}
+    div(v){}
+    sur(v){}
+    pow(v){}
+    // 自身の値と引数を演算した結果の新しいDecimalFloatインスタンスを返す（自身のインスタンス値はそのまま変更せず）
+    toAdd(v) {}
+    toSub(v) {}
+    toMul(v) {}
+    toDiv(v) {}
+    toSur(v) {}
+    toPow(v) {}
+    // 演算した結果を引数にセットする（自身のインスタンス値はそのまま変更せず）引数がプリミティブ型かDecimalFloat型であるべきだし、それによって誤差が生じうる。
+    addTo(){}
+    subTo(){}
+    mulTo(){}
+    divTo(){}
+    surTo(){}
+    powTo(){}
+}
+class FazzyFloat {}// JavaScript標準のNumber型で、かつNaN,Infinityを除外した数
+```
+
+```
+十進数15桁で整数のみなら最大1000兆-1。
+999999999999999
+999,999,999,999,999 K,M,G,T,E
+999兆9999億9999万9999
+
+2^32 = 4294967296 42億
+2^49 = 562949950000000(5.6294995e+14) 562兆
+十進数15桁はこの間
+       999999999999999
+2^49までなら表現できる。但し少数が0桁の場合。
+十進数15桁はこの間
+2^50 = 1125899900000000(1.1258999e+15) 1125兆
+2^64 = 18446744000000000000(1.8446744e+19)
+```
+```
+十進数整数12桁少数3桁計15桁で整数のみなら最大1兆-1。
+-999999999999.999〜+999999999999.999
+```
+
+　やはり元となるNumber型で`0.1+0.7`すると`7.99999`になってしまうのが問題だ。これを根本解決することはできない。よって少数でなく整数を基本とすべきか。
+
+　型を省略してNumber型がセットされた時、かつNumber.isSafeInteger()が真なら、今後もSafedIntegerを基本としたい。
+
+```javascript
+const o = new Obs({age:0});
+```
+
+　誤差が生じることを承知の上で浮動小数点数を使いたい時は以下のようにする。
+
+```javascript
+const o = new Obs({weight:{value:Float(62.1)}}); // Float
+const o = new Obs({weight:{value:Float(62.0)}}); // Float
+const o = new Obs({weight:{value:Float(62)}});   // Float
+const o = new Obs({weight:{value:62.1}});        // Float判定
+const o = new Obs({weight:{value:62.0}});        // Int判定
+const o = new Obs({weight:{value:62}});          // Int判定
+```
+
+　型指定を省略するとInt判定されてしまう場合があるため区別できず危険。
+
+```javascript
+const o = new Obs({weight:{value:62.1}});        // Float判定にすべき？　それとも例外発生または警告ログ出力させるべき？
+const o = new Obs({weight:{value:62.0}});        // Int判定
+const o = new Obs({weight:{value:62}});          // Int判定
+```
+
+
+
+
 　Number型を派生させ、Float, Intの二つのプリミティブ型を作りたい。
 
 * Float: Number型だが、`NaN`,`Infinity`,`-Infinity`は代入できない(有限数Finite)
 * Int: Number型だが、`Number.isSafeInteger()`な値しか代入できない
+    * AllInt: FasyInt/Intの両方を生成できる`new AllInt(value, unsafed, unsigned, bit, min, max)`
+    * FussyInt: unsafed=trueな整数のみ生成できる`new FasyInt(value, unsigned, bit, min, max)`
+    * Int: unsafed=falseな整数のみ生成できる`new Int(value, unsigned, bit, min, max)`
+        * Odd: 奇数のみ生成できる
+        * Even: 偶数のみ生成できる
+        * Pow: xのy乗のみ生成できる`new Pow(2)` 2の0〜n(正数)乗のみセット可能
+        * これら数列はValidatorで行うべきか。個別の型にしていたらキリがない。固定値でなく固定式でもなく任意式で自由に実装できるようにすべき。
 
 ```javascript
 Number
