--- a/memo/0.md
+++ b/memo/0.md
@@ -447,3 +447,36 @@ console.log(typeof obj2, obj2.value); // object 20
 でも`Number`で参照したら関数であり、`v instanceof Number`はできない。
 
 js Numberクラスを継承したクラスのコンストラクタ内でnewの有無により関数とコンストラクタを実行し分ける方法
+
+
+
+
+
+
+# Proxy
+
+https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Global_Objects/Proxy#%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E5%86%85%E9%83%A8%E3%83%A1%E3%82%BD%E3%83%83%E3%83%89
+
+```javascript
+const o = oo.var({name:'', age:0, male:false, weight:oo.float(62.1)});
+const f = oo.fix({PI:oo.float(3.14)});
+
+console.assert(o instanceof oo.ObservedObject); // falseになってしまうかも？
+console.assert(o instanceof oo.FixedObject); // falseになってしまうかも？
+
+o.name = '山田';
+o.age = 12;
+
+o({name:'鈴木', age:24}); // 任意プロパティを一括変更し、一度だけ更新処理する。
+
+const p = new o(); // Cloneする
+
+console.assert(p.has('name'));
+console.assert(p.has('age'));
+console.assert('鈴木'===p.name)
+console.assert(24===p.age)
+```
+
+```javascript
+const a = new Proxy({},{});
+```
