--- a/memo/0.md
+++ b/memo/0.md
@@ -480,3 +480,251 @@ console.assert(24===p.age)
 ```javascript
 const a = new Proxy({},{});
 ```
+
+# 型
+
+　実数を意味する英語 Finite(有限数) Float(浮動小数点数(2進数)) Real(実数)
+
+　JSのNumber型は浮動小数点数なのでFloatが相応しい。倍精度浮動小数点数なので、他言語ならDouble型である。
+
+* 既存Primitive制限系
+    * Quantity      Number型を自由に制約する型（NaN,無限数,非安全範囲数,符号無し,最小値,最大値）
+        * Float     Number型のうち実数のみ（NaN,無限数を除外） Number.EPSILONを考慮してイコール比較するメソッドを追加する。同じく閾値min,maxにピッタリ値セットする。
+            * FixedFloat  Float型のうち指定桁数までは整数化して誤差を文字列化して誤差がないように見せる（(0.1+0.7)=0.799999だが、これを0.7*10して7.999にしtoFixed()して文字列としては正確な十進数表示を返す。但し内部では相変わらずIEEE754仕様値のため0.799999である。valueOf()ではNumber型を返すので誤差るからnearlyEqual()で比較すること。）
+            * Rate      Float型のうち0〜1の実数のみ
+            * Percent   Float型のうち0〜100の実数のみ
+        * Integer   Number型のうち安全な整数のみ
+            * Random32  Integer型のうち参照する度に異なる乱数値へと自身の値が変化する。参照のみ可能で代入不可。53bit迄なので疑似乱数方式では32bit迄。64bit以降は不可
+                * Dice      Random型のうち1〜6など所定の範囲内であるもの。参照のみ可能で代入不可
+            * Sequence  Integer型のうち参照する度に必ず指定の変化をする（+1/-1等。端に到達したとき対極へ行くか逆方向に戻るか全要素を使い果たしたと見做し例外発生か）
+            * Unique    Integer型のうち一意であることを完全保証する（システム全体における値を管理する）。参照のみ可能で代入不可
+                * UniqueSequence    Sequenceを用いてUniqueである数を作り続ける。同じ数は絶対使わない。代入不可。
+    * MultiNumberRandom 複数のNumber型を内部に保持した型乱数。64,128,256,512,1024,〜bit
+    * BigRandom         BigInt型乱数。64bit〜
+    * UUID              BigIntかUint8Array型のうち乱数により作成した128bit値。重複する確率は無視できるほど小さい。Base16表現+ハイフン4字=36字
+    * ULID              BigIntかUint8Array型のうち乱数により作成した128bit値。重複する確率は無視できるほど小さい。Base32表現=26字
+* 新規Object系
+    * NumberDecimal     (Decimalを10に略すとNumber10でn10になるが、Integer8bitを略すとi8になる。両者の数字は前者が基数で後者がbit数であり異なる。基数B,桁数Fで指定希望)
+    * DecimalNumber     整数部と少数部をそれぞれNumber型で管理する。プリミティブ(Number)型との互換性はない
+    * DecimalFlaot      Float型だが10進数の指定桁数迄の数。プリミティブ(Number)型との互換性はない
+    * DecimalReal       プリミティブ(Number)型との互換性はない
+    * DecimalInteger    Integer型だが10進数の指定桁数迄の数。
+    * DecimalString     String型だが
+
+
+数の引数は次の要素が欲しい。
+
+* 代入可能か(Assignable)
+    * Undefindable      undefinedを代入可能か
+    * Nullable          nullを代入可能か
+    * Nanable           NaNを代入可能か
+    * Infinitable       無限数を代入可能か
+    * Mutable           任意値を再代入可能か
+* 量(quantity, amout)
+    * Unsignable
+    * 冪乗Power（底,指数 2^3 底(base)=2,指数(exponent)=3）
+        * Base: 2,8,10,12,16,24,32,36,64,85,128,256
+        * Exponent: 1〜N
+* 範囲(range)
+    * Unsafable
+    * Range
+        * min: 最小値
+        * max: 最大値
+
+
+* 変数代入可能性: VarAssignable
+* 数量: NumberVolume
+* 数範囲: NumberRange
+
+```javascript
+class VarAssignable {// 変数への代入可能性。型を定義するのに用いる。
+    static #MEMBERS = 'undefindable nullable nanable infinitable mutable'.split(' ');
+    static get MEMBERS() {return this.#MEMBERS}
+    static get #OPTIONS = this.MEMBERS.reduce((o,k)=>o[k]=false);
+    static isMember(name) {return this.MEMBER.some(n=>n===name)}
+    constructor(options) {
+        this.#initOptions(options);
+    }
+    /*
+    get #defaultOptions() { return {
+        undefindable: false,   // undefinedを代入可能か
+        nullable: false,       // nullを代入可能か
+        nanable: false,        // NaNを代入可能か
+        infinitable: false,    // 無限数を代入可能か
+        mutable: false,        // 任意値を再代入可能か
+    } }
+    */
+    #initOptions(options) {
+//        const D = this.#defaultOptions;
+        const D = VarAssignable.#OPTIONS;
+        for (let k of Object.keys(options)) {if (!VarAssignable.isMember(k)) {console.warn(`不正なメンバのため削除しました。:${k}`); delete options[k];}}
+        this._ = {...D, ...options};
+        //for (let k of Object.keys(options)) {if (!VarAssignable.isMember(k)) {throw new TypeError(`不正なメンバです。:${k}`)}}
+    }
+}
+```
+```javascript
+class NumberVolume {// 数量の定義。型を定義するのに用いる。
+    static #MEMBERS = 'undefindable nullable nanable infinitable mutable'.split(' ');
+    static get MEMBERS() {return this.#MEMBERS}
+    static get #OPTIONS() {return this.MEMBERS.reduce((o,k)=>o[k]=false)};
+    static isMember(name) {return this.MEMBER.some(n=>n===name)}
+    constructor(options) {
+        this.#initOptions(options);
+    }
+    #initOptions(options) {
+        const D = VarAssignable.#OPTIONS;
+        for (let k of Object.keys(options)) {if (!VarAssignable.isMember(k)) {console.warn(`不正なメンバのため削除しました。:${k}`); delete options[k];}}
+        this._ = {...D, ...options};
+    }
+}
+```
+
+
+
+
+```javascript
+class NamedObject {// PythonのNamedTupleのようなもの。
+
+}
+
+const varAssignable = new NamedObject('undefindable nullable nanable infinitable mutable');
+```
+```javascript
+class TypedObject {// C#のEnumのようなもの。但しメンバは別個の型を持てる。独自のキーバリューを持ちそれぞれが所定の型をもち自身も独自の型をもつ。つまり動的クラス生成。
+
+}
+const VarAssignable = new TypedObject({
+    undefindable: false,
+    nullable: false,
+    nanable: false,
+    infinitable: false,
+    mutable: false});
+const NumberVolume = new TypedObject({
+    unsafable: false, // 何も引数がなければunsafable=trueと判定することで省略可能か？
+    unsignable: false,
+    base: Integer({value:2, min:2, max:Number.SAFE_MAX_INTEGER, nullable:true}),
+    exponent: Integer({value:32, min:1, max:Number.SAFE_MAX_INTEGER, nullable:true}),
+});
+const NumberRange = new TypedObject({
+    min: Integer({value:0, min:Number.SAFE_MIN_INTEGER, max:Number.SAFE_MAX_INTEGER}),
+    max: Integer({value:0, min:Number.SAFE_MIN_INTEGER, max:Number.SAFE_MAX_INTEGER}),
+});
+
+
+const assignable = new VarAssignable({mutable:true});
+const = new NumberVolume(); // {unsafable:true, unsignable:false, base:2, exp:32}
+const = new NumberVolume(false); // {unsafable:false, unsignable:false, base:2, exp:32}
+const = new NumberVolume(true); // {unsafable:false, unsignable:true, base:2, exp:32}
+const = new NumberVolume(true,10,4); // {unsafable:false, unsignable:true, base:10, exp:4}
+const = new ({});
+```
+
+# 型の引数を最適化する
+
+* なるだけ引数を減らしても思い通りに作れるようにする
+* なるだけ引数の順序は覚えずに済むようにする
+* なるだけ引数の名前は覚えることが少ないようにする（統一性をもたせる）
+
+```javascript
+const o = oo.var(`
+    age ui8 [3,8] 3;
+    name str [8,32] /[a-z]{8,32}/i ''
+`);
+const o = oo.var({
+    name: '',
+    name: String,
+    name: String(),
+    name: String(''),
+    name: new String,
+    name: new String(),
+    name: { // 内部でoo.var({})する
+        first: '',
+        last: '',
+    },
+    age: 0,
+    age: Integer,
+    age: Integer(),
+    age: new Integer,
+    age: new Integer(),
+    age: oo.C.Integer,
+    age: oo.T.i,
+    age: oo.T.int,
+    age: oo.T.integer,
+    age: oo.T.i(123),                           // 第一引数にvalue
+    age: oo.T.i({value:123}),                   // 第一引数に任意プロパティを順序不問でセット
+    age: oo.T.i(123, {unsigned:true, bit:32, min:3, max:8}),    // 第一引数にvalue, 第二引数に任意プロパティを順序不問でセット
+    age: oo.T.i(123, {unsigned:true, bit:32, range:[3,8]}),
+    age: oo.T.i(123, unsigned:true, bit:32, min:3, max:8),      // 第一、第二にオブジェクトを使わない引数を、任意の数だけ
+    age: oo.T.i(123, unsigned:true, bit:32, range:[3,8]),
+    age: 'ui8',
+
+    age: oo.DecimalFloat(), // fig:1, value:0, part:{i:0, f:0}
+    age: oo.DecimalFloat(2), // fig:2, value:0, part:{i:0, f:0}
+    age: oo.DecimalFloat([0,0,2]), // fig:2, value:0, part:{i:0, f:0}
+    age: oo.DecimalFloat([123,45,6]), // fig:6, value:0, part:{i:123, f:45}
+    age: oo.DecimalFloat([123,45,6], {}), // fig:6, value:0, part:{i:123, f:45}
+    age: oo.DecimalInteger(), // value:0
+});
+```
+
+
+js Number型のように'Number'で関数とクラスを参照する方法（Number()、new Number()、instanceofの右辺になる、の三つを満たす方法）
+
+AI による概要
+JavaScriptにおいて、
+Number型と同様に単一の識別子（例えばMyType）で「関数呼び出し (MyType())」「コンストラクタ呼び出し (new MyType())」「instanceofの右辺」の3つを満たす方法は、コンストラクタ関数と、そのコンストラクタのプロトタイプを継承するクラスを同じ識別子に割り当てることで実現できます。 
+具体的な方法は以下の通りです。
+実現方法
+JavaScriptでは、関数もオブジェクトであり、コンストラクタとして機能させることができます。また、instanceof演算子は、右辺に指定されたコンストラクタのプロトタイプチェーンに、左辺のオブジェクトが含まれているかどうかをチェックします。 
+この性質を利用して、以下のように実装します。
+javascript
+
+// 1. MyTypeという名前のコンストラクタ関数を定義します。
+function MyType(value) {
+    // new演算子がついているかどうかで処理を分岐させます。
+    if (new.target) {
+        // new MyType() の場合: インスタンスを初期化します。
+        this.value = value;
+    } else {
+        // MyType() の場合: 新しいインスタンスを生成して返します (Number()の振る舞い)。
+        return new MyType(value);
+    }
+}
+
+// 2. instanceof のチェックのために、プロトタイプにメソッドなどを追加できます。
+MyType.prototype.getValue = function() {
+    return this.value;
+};
+
+// 3. 静的メソッドを追加することも可能です (Number.parseInt()のような振る舞い)。
+MyType.staticMethod = function() {
+    console.log("This is a static method.");
+};
+
+// 4. クラスの別名として同じ識別子に代入します (実際には必要ありませんが、概念として)。
+// MyType はすでにコンストラクタ関数なので、そのまま使えます。
+
+使用例
+上記のMyTypeを使用すると、要求された3つの条件を満たせます。
+javascript
+
+// 1. 関数呼び出し (MyType())
+// プリミティブ値ではなく、MyTypeのインスタンスを返します。
+const val = MyType(10); 
+console.log(typeof val); // "object"
+console.log(val.getValue()); // 10
+
+// 2. コンストラクタ呼び出し (new MyType())
+const instance = new MyType(20);
+console.log(typeof instance); // "object"
+console.log(instance.getValue()); // 20
+
+// 3. instanceofの右辺になる
+console.log(val instanceof MyType); // true
+console.log(instance instanceof MyType); // true
+
+// 静的メソッドの呼び出し
+MyType.staticMethod(); // "This is a static method."
+
+このように、単一の関数オブジェクトがコンストラクタとしても通常の関数としても機能し、instanceof演算子の対象としても認識されます。
