--- a/memo/0.md
+++ b/memo/0.md
@@ -536,6 +536,11 @@ const a = new Proxy({},{});
 * 数量: NumberVolume
 * 数範囲: NumberRange
 
+* 残余引数／可変長引数
+    * 柔軟引数(FlexArgument)
+        * 任意の定めた名前と型のプロパティを持つ
+        * なるだけ少ない引数で思い通りに作れるようデフォルト値が工夫されている
+
 ```javascript
 class VarAssignable {// 変数への代入可能性。型を定義するのに用いる。
     static #MEMBERS = 'undefindable nullable nanable infinitable mutable'.split(' ');
