add 16 infinitedとunsafedの論理矛盾解決

--- a/memo/0.md
+++ b/memo/0.md
@@ -733,3 +733,32 @@ console.log(instance instanceof MyType); // true
 MyType.staticMethod(); // "This is a static method."
 
 このように、単一の関数オブジェクトがコンストラクタとしても通常の関数としても機能し、instanceof演算子の対象としても認識されます。
+
+
+# 引数論理エラー
+
+min	max
+-Infinity	Infinity
+-Number.MAX_VALUE	Number.MAX_VALUE
+Number.MIN_SAFE_INTEGER	Number.MIN_SAFE_INTEGER
+
+infinited	unsafed	min	max
+false	false	Number.MIN_SAFE_INTEGER	Number.MAX_SAFE_INTEGER
+false	true	-Number.MAX_VALUE	Number.MAX_VALUE
+true	false	論理エラー
+true	true	-Infinity	Infinity
+
+範囲がSAFEなのにInfinityは許容すると離散的になってしまう。するとMIN/MAX範囲内を論理式で表現しようとした時、MAX_VALUEまでの値すら含んでしまう。その場合だけ別の式にしてもいいが、面倒なのでその場合を禁止し例外とする。
+
+　もし許可するなら以下のような式になる。
+
+```javascript
+('number'===typeof v && !Number.isNaN(v) Number.MIN_SAFE_INTEGER<=v && v<=Number.MAX_SAFE_INTEGER) || ([Infinity,-Infinity].some(x=>x===v))
+```
+
+　禁止すれば以下のように簡単な式で済む。
+
+```javascript
+('number'===typeof v && !Number.isNaN(v) MIN<=v && v<=MAX))
+```
+
